LaTeX: images switched to textwidth for fit; CSV tables now generated as longtable; paper updated

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -52,54 +52,54 @@ Bu bolumde, results/ dizinindeki ciktilari kullanarak gorsel ve tablolu ozetler 
 \subsection{Ag Gorsellestirmeleri}
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.90\linewidth]{network_full_topN.png}
+  \includegraphics[width=0.90\textwidth]{network_full_topN.png}
   \caption{Top N + bagimliliklarin olusturdugu yonlu ag (dugum boyutu: in-degree, renk: Top N turuncu / digerleri mavi).}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.85\linewidth]{network_topN_only.png}
+  \includegraphics[width=0.85\textwidth]{network_topN_only.png}
   \caption{Sadece Top N dugumlerin induklenmis alt-agi.}
 \end{figure}
 
 \subsection{Derece Dagilimlari ve Korelasyonlar}
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.90\linewidth]{degree_histograms.png}
+  \includegraphics[width=0.90\textwidth]{degree_histograms.png}
   \caption{In-Degree ve Out-Degree histogramlari (log olcek).}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.90\linewidth]{scatter_correlations.png}
+  \includegraphics[width=0.90\textwidth]{scatter_correlations.png}
   \caption{Korelasyonlar: In-Degree vs Betweenness (solda), In-Degree vs Out-Degree (sagda).}
 \end{figure}
 
 \subsection{Liderler (Ilk 10)}
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.90\linewidth]{top10_leaders.png}
+  \includegraphics[width=0.90\textwidth]{top10_leaders.png}
   \caption{Ilk 10 lider (In/Out-Degree ve Betweenness).}
 \end{figure}
 
 \subsection{Ek Gorseller}
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.48\linewidth]{top10_in_degree.png}
-  \includegraphics[width=0.48\linewidth]{top10_out_degree.png}
+  \includegraphics[width=0.48\textwidth]{top10_in_degree.png}
+  \includegraphics[width=0.48\textwidth]{top10_out_degree.png}
   \caption{Ilk 10 In-Degree (sol) ve Out-Degree (sag).}
 \end{figure}
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.6\linewidth]{top10_betweenness.png}
+  \includegraphics[width=0.6\textwidth]{top10_betweenness.png}
   \caption{Ilk 10 Betweenness.}
 \end{figure}
 
 \subsection{Risk Skoru ve Robustluk}
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.75\linewidth]{top20_risk.png}
+  \includegraphics[width=0.75\textwidth]{top20_risk.png}
   \caption{Bilesik risk skoru ile ust 20 paket.}
 \end{figure}
 
@@ -123,7 +123,7 @@ Bu bolumde, results/ dizinindeki ciktilari kullanarak gorsel ve tablolu ozetler 
 Risk liderleri icin hesaplanan basamaklanma etkisi asagidaki gorselde sunulmustur.
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.75\linewidth]{cascade_impact_top20.png}
+  \includegraphics[width=0.75\textwidth]{cascade_impact_top20.png}
   \caption{Risk skoruna gore ust 20 paket icin basamaklanma (cascading impact) buyuklugu.}
 \end{figure}
 \IfFileExists{../results/cascade_impact_top20.tex}{\input{../results/cascade_impact_top20.tex}}{\fbox{cascade\_impact\_top20.tex bulunamad\i }}
@@ -131,7 +131,7 @@ Risk liderleri icin hesaplanan basamaklanma etkisi asagidaki gorselde sunulmustu
 \paragraph{Risk--Basamaklanma Cizimi.} Ek olarak, risk skoru ile basamaklanma etkisi arasindaki iliski de gozlemlenmistir.
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.6\linewidth]{risk_vs_cascade.png}
+  \includegraphics[width=0.6\textwidth]{risk_vs_cascade.png}
   \caption{Risk skoru ile basamaklanma etkisi arasindaki iliski (scatter).}
 \end{figure}
 
