--- a/results/cascade_impact_top20.tex
+++ b/results/cascade_impact_top20.tex
@@ -1,29 +1,35 @@
-\begin{table}[h]
-\centering
-\caption{Basamaklanma Etkisi: Top 20 (Ters y"onde etkilenebilecek paket say\i s\i)}
-\begin{tabular}{l r}
+\begin{longtable}{l r}
+\caption{Basamaklanma Etkisi: Top 20 (Ters yonde etkilenebilecek paket sayisi)}\\
 \toprule
-Paket & Etkilenen Paket Say\i s\i \\ \midrule
-es-errors & 83 \
-@babel/helper-plugin-utils & 77 \
-get-intrinsic & 70 \
-debug & 69 \
-tslib & 64 \
-call-bound & 61 \
-@babel/types & 60 \
-@smithy/types & 50 \
-@types/node & 44 \
-@babel/traverse & 41 \
-chalk & 40 \
-call-bind & 36 \
-@jest/types & 34 \
-jest-util & 31 \
-@babel/core & 16 \
-es-abstract & 15 \
-@jest/transform & 13 \
-jest-snapshot & 10 \
-@jest/core & 2 \
-@babel/preset-env & 0 \
+Paket & Etkilenen Paket Sayisi \\
+\midrule
+\endfirsthead
+\toprule
+Paket & Etkilenen Paket Sayisi \\
+\midrule
+\endhead
 \bottomrule
-\end{tabular}
-\end{table}
+\endfoot
+\bottomrule
+\endlastfoot
+es-errors & 83 \\
+@babel/helper-plugin-utils & 77 \\
+get-intrinsic & 70 \\
+debug & 69 \\
+tslib & 64 \\
+call-bound & 61 \\
+@babel/types & 60 \\
+@smithy/types & 50 \\
+@types/node & 44 \\
+@babel/traverse & 41 \\
+chalk & 40 \\
+call-bind & 36 \\
+@jest/types & 34 \\
+jest-util & 31 \\
+@babel/core & 16 \\
+es-abstract & 15 \\
+@jest/transform & 13 \\
+jest-snapshot & 10 \\
+@jest/core & 2 \\
+@babel/preset-env & 0 \\
+\end{longtable}
