--- a/results/edge_betweenness_top10.tex
+++ b/results/edge_betweenness_top10.tex
@@ -1,19 +1,25 @@
-\begin{table}[h]
-\centering
-\caption{Edge Betweenness Ilk 10 (Y"uksek kopru kenarlar)}
-\begin{tabular}{l l r}
+\begin{longtable}{l l r}
+\caption{Edge Betweenness Ilk 10 (Yuksek kopru kenarlar)}\\
 \toprule
-U & V & Edge Betweenness \\ \midrule
-@jest/transform & babel-plugin-istanbul & 0.000222 \
-@jest/expect & jest-snapshot & 0.000212 \
-jest-snapshot & @jest/transform & 0.000206 \
-jest & @jest/core & 0.000150 \
-call-bound & get-intrinsic & 0.000150 \
-glob & jackspeak & 0.000147 \
-reflect.getprototypeof & which-builtin-type & 0.000146 \
-jackspeak & @isaacs/cliui & 0.000140 \
-babel-plugin-istanbul & test-exclude & 0.000139 \
-@babel/core & @babel/helper-compilation-targets & 0.000138 \
+U & V & Edge Betweenness \\
+\midrule
+\endfirsthead
+\toprule
+U & V & Edge Betweenness \\
+\midrule
+\endhead
 \bottomrule
-\end{tabular}
-\end{table}
+\endfoot
+\bottomrule
+\endlastfoot
+@jest/transform & babel-plugin-istanbul & 0.000222 \\
+@jest/expect & jest-snapshot & 0.000212 \\
+jest-snapshot & @jest/transform & 0.000206 \\
+jest & @jest/core & 0.000150 \\
+call-bound & get-intrinsic & 0.000150 \\
+glob & jackspeak & 0.000147 \\
+reflect.getprototypeof & which-builtin-type & 0.000146 \\
+jackspeak & @isaacs/cliui & 0.000140 \\
+babel-plugin-istanbul & test-exclude & 0.000139 \\
+@babel/core & @babel/helper-compilation-targets & 0.000138 \\
+\end{longtable}
